--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,7 +1,7 @@
 /* Header.css */
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center; /* Center the items vertically */
     width: 100vw;
     padding: 20px;
